# buddy-be

./: .gitignore  pyproject.toml
src/: main.py
src/api/v1/endpoints/: talk.py
src/services/: actions.py  speech.py
src/services/alarms/: alarms.py
src/utils/: convert.py  intent_processor.py  response_selector.py
